--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!--Read the table-->
     <script>
-        var table = document.querySelector("tbody");
+        var table = document.querySelector("#one");
 for (var i = 0, row; row = table.rows[i]; i++) {
    //iterate through rows
    //rows would be accessed using the "row" variable assigned in the for loop
