--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
 
     <!--Read the table-->
     <script>
-        var table = document.querySelector("#one");
+        $(document).ready(function(){
+            $("table tbody tr").each(function(rowIndex){
+                var line='';
+                $.each(this.cells,function(cellIndex, cell){
+                    line+=cell.textContent;
+                });
+                alert(line);
+            });
+        });
+        /*var table = document.querySelector("#one");
 for (var i = 0, row; row = table.rows[i]; i++) {
    //iterate through rows
    //rows would be accessed using the "row" variable assigned in the for loop
@@ -50,7 +59,7 @@ for (var i = 0, row; row = table.rows[i]; i++) {
      var value=col.innerHTML;
      console.log(value);
    }  
-}
+}*/
     </script>
 </body>
 </html>
