--- a/report1.html
+++ b/report1.html
@@ -53,7 +53,7 @@
 					<span class="rgSect1TitleText">Variable Access Report for Project</span>
 				</span>
 			</h2>
-			<table class="rgUnruledTable" style="width:100%;border-top-style:solid;border-left-style:solid;border-bottom-style:solid;border-right-style:solid;border-top-width:1pt;border-left-width:1pt;border-bottom-width:1pt;border-right-width:1pt;">
+			<table id="one" class="rgUnruledTable" style="width:100%;border-top-style:solid;border-left-style:solid;border-bottom-style:solid;border-right-style:solid;border-top-width:1pt;border-left-width:1pt;border-bottom-width:1pt;border-right-width:1pt;">
 				<colgroup span="15">
 					<col style="width:6.666666666666667%;"/>
 					<col style="width:6.666666666666667%;"/>
@@ -150,7 +150,7 @@
 						</td>
 					</tr>
 				</thead>
-				<tbody id="one" class="rgUnruledTable" style="width:100%;border-top-style:none;border-left-style:solid;border-bottom-style:solid;border-right-style:solid;border-left-width:1pt;border-bottom-width:1pt;border-right-width:1pt;">
+				<tbody class="rgUnruledTable" style="width:100%;border-top-style:none;border-left-style:solid;border-bottom-style:solid;border-right-style:solid;border-left-width:1pt;border-bottom-width:1pt;border-right-width:1pt;">
 					<tr>
 						<td style="border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt;">
 							<p style="text-align:left;">
