--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ for (var i = 0, row; row = table.rows[i]; i++) {
    }  
 }*/
   // Basic Usage
-  var table = $('#example-table').tableToJSON();
+  var table = $('#one').tableToJSON();
+  alert(table);
     </script>
 </body>
 </html>
