--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ for (var i = 0, row; row = table.rows[i]; i++) {
 }*/
   // Basic Usage
   var table = $('#one').tableToJSON();
-  alert(table);
+  console.log(table);
     </script>
 </body>
 </html>
