--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 class="text-center">Excel Generator</h1>
     <script>
         $(document).ready(function() {
-    $('#load').load('report1.html');
+    $('#load').load('Report_1.html');
 });
     </script>
     <span id="load"></span>
