--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--jQuery-->
     <script src="assets/js/jquery-3.4.1.js"></script>
     <!--Table to JSON-->
-    <script src="assets/js/tabletojson.js" integrity="sha256-H8xrCe0tZFi/C2CgxkmiGksqVaxhW0PFcUKZJZo1yNU=" crossorigin="anonymous"></script>
+    <script src="assets/js/tabletojson.js"></script>
     <!---->
 </head>
 <body>
