--- a/Report_1.html
+++ b/Report_1.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<!--<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <html>
     <head>
 		<meta content="text/html; charset=utf-8" http-equiv="content-type"></meta>
@@ -23,7 +23,7 @@
         //]]>
     </script>
 	<link href="./stylesheets/combined.css" rel="StyleSheet" type="text/css"></link></head>
-<body bgcolor="white" onload="outline()" text="black">
+<body bgcolor="white" onload="outline()" text="black">-->
             <div class="titlepage">
                 <div>
                     <p class="rgTitle">
@@ -71,6 +71,6 @@
 <form class="Hole"><label for="rgContent">rgContent</label><input id="rgContent" value="report content"></input></form>
 -->
 
-<!--</div>-->
+<!--</div>
 </body>
-</html>
+</html>-->
