Pre Final Commit

--- a/report1.html
+++ b/report1.html
@@ -9,8 +9,7 @@
 		<script src="./scripts/cssrule.js"></script>
 		<script src="./scripts/toc.js"></script>
 		<script>
-        //
-			<![CDATA[
+			//<![CDATA[
         function outline() {
             var tocDiv = document.getElementById('toc');
             if (tocDiv) {
@@ -1182,6 +1181,8 @@
 							<p/>
 						</td>
 					</tr>
+					</tbody>
+					</table>
 					<!-- <div lang="en" class="book"> -->
 					<!-- <form class="Hole"><label for="rgRectoTitlePage">rgRectoTitlePage</label><input id="rgRectoTitlePage" value="title section"></input></form> -->
 					<!--
